Arreglo de las paths para log in y sign up

--- a/src/main/resources/templates/user/registro.html
+++ b/src/main/resources/templates/user/registro.html
@@ -10,7 +10,7 @@
 <body>
     <div class="registro-container">
         <h2>Registro de Árbitro</h2>
-        <form action="/usuarios/registro" method="post">
+        <form action="/registro" method="post">
             <label for="nombre">Nombre completo:</label>
             <input type="text" id="nombre" name="nombre" required>
             <label for="correo">Correo electrónico:</label>
