Correccion de errores en la base de datos y en el mapeo de paths, Log in y Sign up funcionando correctamente

--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -10,7 +10,7 @@
 <body>
     <div class="perfil-container">
         <h2>Completa tu perfil</h2>
-        <form action="/usuarios/perfil" method="post">
+        <form action="/perfil" method="post">
             <input type="hidden" name="correo" th:value="${usuario.correo}" />
             <label for="especialidad">Especialidad:</label>
             <select id="especialidad" name="especialidad" required>
